Finish paella recipe

--- a/recipes/paella.html
+++ b/recipes/paella.html
@@ -31,6 +31,17 @@
         <li>1 jet of oil</li>
         <li>1 pinch of salt</li>
     </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li><strong>Wash the mussels</strong>, cut the green pepper and chop the garlic. Also, clean and cut the squid.</li>
+        <li><strong>Put a paella on the fire with a good jet of oil</strong>. Sauté the prawns and squid or cuttlefish over high heat. Take out the prawns and reserve them.</li>
+        <li><strong>Set the squid and cuttlefish aside</strong>. If necessary, add a little more oil and add the green pepper. Let cook for 3-4 minutes and add the minced garlic. Stir so that the garlic does not burn and, before it takes on color, add the tomato. Stir and let cook a few more minutes.</li>
+        <li><strong>Add the mussels so that they open up</strong>. You can also pour a ladle of broth. Add the teaspoon of sweet paprika and the saffron threads. You can make a homemade fish broth by visiting our fish broth recipe.</li>
+        <li><strong>Add the rice</strong>, stir everything so that the rice is impregnated with the flavor of all the ingredients.</li>
+        <li><strong>Add the rest of the broth (previously heated)</strong>, taste for salt and correct if necessary. Add the coloring and let the paella cook for about 15-18 minutes or until the rice is ready.</li>
+        <li>5 minutes before the rice is ready, top with the prawns and finish cooking the rice. Let the seafood paella rest for about 5 or 10 minutes.</li>
+        <li><strong>The paella is ready to eat!</strong></li>
+    </ol>
 </body>
 
 </html>
