Change the title of the webpage to Spanish Recipes

--- a/recipes/paella.html
+++ b/recipes/paella.html
@@ -13,7 +13,7 @@
     <h2>Description</h2>
     <p>Of Valencian origin, Paella has become an icon of Spain. Although there are many ways to prepare it, the truth is
         that all its presentations are delicious. For this to be the case, the key to a good paella often lies in the
-        use of the correct techniques and ingredients. For this reason, at Odin Recipes we are going to teach you step
+        use of the correct techniques and ingredients. For this reason, at Spanish Recipes we are going to teach you step
         by step how to make easy seafood paella so that you can enjoy the flavors of the sea from the comfort of your
         home.</p>
     <h2>Ingredients</h2>
