Add Fabada asturiana to index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Spanish Recipes</h1>
     <a href="recipes/paella.html" target="_blank" rel="noopener noreferrer">Paella</a>
+    <a href="recipes/fabada.html" target="_blank" rel="noopener noreferrer">Fabada asturiana</a>
 </body>
 </html>
