--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>Spanish Recipes</h1>
-    <a href="recipes/paella.html" target="_blank" rel="noopener noreferrer">Paella</a>
-    <a href="recipes/fabada.html" target="_blank" rel="noopener noreferrer">Fabada asturiana</a>
+    <ul>
+        <li><a href="recipes/paella.html" target="_blank" rel="noopener noreferrer">Paella</a></li>
+        <li><a href="recipes/fabada.html" target="_blank" rel="noopener noreferrer">Fabada asturiana</a></li>
+    </ul>
+    
 </body>
 </html>
